tests/cmp/record-pat-dotdot-middle.golden
Parse Error:
tests/cmp/record-pat-dotdot-middle.trp:3:15: parse error
  3 |     val {a, .., b} = r
    |               ^
  unexpected ','
  expected '}'

